--- a/src/components/DatasetItem.css
+++ b/src/components/DatasetItem.css
@@ -27,6 +27,10 @@
   cursor: pointer;
 }
 
+.recent {
+  cursor: default;
+}
+
 .dataset .center-info {
   margin-left: 15px;
   max-width: 210px;
@@ -50,6 +54,13 @@
   text-overflow: ellipsis;
 }
 
+.dataset .add-icon {
+  height: 0.9375rem;
+}
+.tabular-icon {
+  height: 1.25rem;
+}
+
 .link-icon {
   justify-self: flex-end;
   margin-left: auto;
@@ -71,6 +82,7 @@
   margin-left: auto;
   height: 25px;
   width: 25px;
+  cursor: pointer;
 }
 
 .upload-button {
