added in style changes and workbook/user support

--- a/src/components/DatasetItem.css
+++ b/src/components/DatasetItem.css
@@ -82,6 +82,12 @@
   margin-top: 0.125rem;
   margin-left: 0.25rem;
 }
+
+.unsync-icon {
+  fill: red;
+  margin-top: 0.125rem;
+  margin-left: 0.25rem;
+}
 .loading-border {
   width: 10px;
   height: 10px;
