--- a/src/components/DatasetsView.css
+++ b/src/components/DatasetsView.css
@@ -51,7 +51,8 @@
   padding: 0;
   color: #4376b2;
   float: right;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: bold;
-  padding-bottom: 15px;
+  margin-top: -8px;
+  margin-bottom: 4px;
 }
