Hub 76 revamp sync (#77)
* wip

* work in progress, functionality works

* work in progress

* removed Object.values

* fixed sheet selection

* phase 1

* added in more tests and removed unused files

* removed vs code

* lint fixes

* added in validstate

* removed unused variable

* updated tests

* support for migration

* moved length checker down

* always fetches dataset

* made function to push to localstorage

* workbook name not working yet

* added in style changes and workbook/user support

* moved dataset info to a new line

* added in logic change

* removed unused constants

* added dataset check condition back

* removed unused variable

* updated tests

* removed console.log

* fixed replcae

* added comments

* removed async and variable declaration

* fixed replacing

* added return and removed console

* removed commented code

* added back in disabled state in upload button

* updated tests

* everything except error handling

* updated tests

* error done

* added in UUID

* lint fixes

* removed findIndex for IE support

* fixed removing findIndex

--- a/src/App.css
+++ b/src/App.css
@@ -87,10 +87,6 @@ body {
   padding-left: 1rem;
 }
 
-.full-screen-modal {
-  background-color: #fff;
-}
-
 .full-screen-modal .header {
   padding: 15px;
   border-bottom: 1px solid #dfe3e9;
@@ -133,6 +129,20 @@ body {
 
 .full-screen-modal form button {
   width: 47%;
+  margin-left: 0.5rem;
+}
+
+.full-screen-modal form button .cancel-button {
+  margin-left: 0 !important;
+}
+
+.full-screen-modal .button-group .submit-button {
+  margin-left: auto !important;
+}
+
+.full-screen-modal .button-group .full-submit-button {
+  margin-left: auto !important;
+  width: 100% !important;
 }
 
 .loader-icon {
@@ -191,4 +201,8 @@ body {
 
 .center-modal .modal-footer.save .btn+.btn {
   margin-left: 1rem;
+}
+
+.help-block {
+  font-size: 0.6875rem;
 }
