--- a/src/components/DatasetItem.css
+++ b/src/components/DatasetItem.css
@@ -27,6 +27,17 @@
   cursor: pointer;
 }
 
+.recent {
+  cursor: default;
+}
+
+.date {
+  font-size: 0.9375rem;
+  color: gray;
+  padding: 0.5rem;
+  padding-left: 1rem;
+}
+
 .dataset .center-info {
   margin-left: 15px;
   max-width: 210px;
@@ -50,6 +61,13 @@
   text-overflow: ellipsis;
 }
 
+.dataset .add-icon {
+  height: 0.9375rem;
+}
+.tabular-icon {
+  height: 1.25rem;
+}
+
 .link-icon {
   justify-self: flex-end;
   margin-left: auto;
@@ -58,3 +76,32 @@
 .link-icon .stroke {
   fill: #c1c1c1;
 }
+
+.resync-icon {
+  fill: #517fb8;
+  margin-top: 0.125rem;
+  margin-left: 0.25rem;
+}
+
+.loading-border {
+  width: 10px;
+  height: 10px;
+}
+
+.icon-border {
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.upload-button {
+  font-size: 15px;
+  color: #517fb8;
+  padding-right: 0.9375rem;
+  font-weight: 700;
+  text-decoration: none !important;
+}
+
+.large-header {
+  margin-right: auto;
+}
+
