Fix bugs on insights page

--- a/src/components/CreateProjectModal.css
+++ b/src/components/CreateProjectModal.css
@@ -16,40 +16,44 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
- .create-project-modal {
+.create-project-modal {
   position: absolute;
   top: 50px;
- }
+}
 
- .create-project-form {
+.create-project-form {
   padding: 15px;
- }
+}
 
- .create-project-modal .control-label {
+.create-project-modal .control-label {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
- }
+}
 
- .project-form-info {
-   font-size: .8125rem;
-   font-weight: normal;
-   color: #5d6f85;
- }
+.project-form-info {
+  font-size: 0.8125rem;
+  font-weight: normal;
+  color: #5d6f85;
+}
 
-  .create-project-modal .radio-option-description {
-    color: #5d6f85;
-  }
+.create-project-modal .radio-option-description {
+  color: #5d6f85;
+}
 
-  .create-project-modal .radio:first-child {
-    margin-bottom: 1rem;
-  }
+.create-project-modal .radio:first-child {
+  margin-bottom: 1rem;
+}
 
-  .create-project-modal .radio .radio-label {
-    color: #8c9cb0;
-  }
+.create-project-modal .radio .radio-label {
+  color: #8c9cb0;
+}
 
-  .create-project-modal .radio.checked .radio-label {
-    color: #608fc5;
-  }
+.create-project-modal .radio.checked .radio-label {
+  color: #608fc5;
+}
+
+.create-project-title {
+  background: white;
+}
