--- a/src/components/UploadModal.css
+++ b/src/components/UploadModal.css
@@ -16,129 +16,129 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
- .upload-modal {
-    top: 50px;
-  }
-  
-  .selection {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .selection span {
-    margin: 0;
-    padding-left: 0.125rem;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    font-weight: normal;
-    font-size: 0.875rem;
-    font-weight: 700;
-  }
-  
-  .selection span::before {
-    content: '';
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    border-radius: 1em;
-    margin-right: 0.75em;
-    background: white;
-    border: 1px solid lightgray
-  }
-  
-  .selection input[type=radio] {
-    display: none;
-  }
-  
-  .selection input[type=radio]:checked + span::before {
-    border: 4.5px solid #328df3;
-    background: white;
-  }
-  
-  .selection .radio-button {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .selection .selection-info {
-    display: flex;
-    padding: 12px;
-    color: #969696;
-    font-size: 11px;
-  }
-  
-  .select-sheet {
-    background-color: aliceblue;
-  }
-  
-  .full-screen-modal .center-block .selection-form {
-    padding: 0;
-  }
+.upload-modal {
+  top: 50px;
+}
 
-  .url {
-      display: flex;
-  }
+.selection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .url-group {
-    border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray
-  }
+.selection span {
+  margin: 0;
+  padding-left: 0.125rem;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  font-weight: normal;
+  font-size: 0.875rem;
+  font-weight: 700;
+}
 
-  .url-group .body {
-    margin-top: 1rem;
-  }
+.selection span::before {
+  content: '';
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border-radius: 1em;
+  margin-right: 0.75em;
+  background: white;
+  border: 1px solid lightgray;
+}
 
-  .category-title {
-    background-color: #fff;
-    height: 3rem;
-    display: flex;
-    align-items: center;
-    padding-left: 0.9375rem;
-    font-size: 18px;
-    border-bottom: 1px solid lightgray;
-  }
-  .category-reminder {
-    font-size: 0.9375rem;
-    font-weight: 700;
-    padding: 1rem;
-    text-align: center;
-    color: lightgray;
-  }
-  
-  .category-title .control-label {
-    margin-bottom: 0;
-  }
+.selection input[type='radio'] {
+  display: none;
+}
 
-  .browse-button {
-    width: 25% !important;
-    margin-left: 0.625rem;
-    padding: 0 0.625rem;
-    height: 2rem;
-    font-size: 0.8125rem;
-    background: white;
-  }
+.selection input[type='radio']:checked + span::before {
+  border: 4.5px solid #328df3;
+  background: white;
+}
 
-  .help-block {
-    font-size: 0.6875rem;
-    margin-top: 0.3125rem;
-  }
+.selection .radio-button {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
 
-  .upload-modal .control-label {
-    font-size: 0.9375rem;
-  }
+.selection .selection-info {
+  display: flex;
+  padding: 12px;
+  color: #969696;
+  font-size: 11px;
+}
 
-  .upload-modal .form-control {
-    height: 2rem;
-    border-radius: 0.3125rem !important;
-  }
+.select-sheet {
+  background-color: aliceblue;
+}
 
-  .textField {
-    font-size: 0.875rem;
-  }
+.full-screen-modal .center-block .selection-form {
+  padding: 0;
+}
 
-  .cancel-button {
-    margin-left: 0 !important;
-  }
+.url {
+  display: flex;
+}
+
+.url-group {
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+}
+
+.url-group .body {
+  margin-top: 1rem;
+}
+
+.category-title {
+  background-color: #fff;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  padding-left: 0.9375rem;
+  font-size: 18px;
+  border-bottom: 1px solid lightgray;
+}
+.category-reminder {
+  font-size: 0.9375rem;
+  font-weight: 700;
+  padding: 1rem;
+  text-align: center;
+  color: lightgray;
+}
+
+.category-title .control-label {
+  margin-bottom: 0;
+}
+
+.browse-button {
+  width: 25% !important;
+  margin-left: 0.625rem;
+  padding: 0 0.625rem;
+  height: 2rem;
+  font-size: 0.8125rem;
+  background: white;
+}
+
+.help-block {
+  font-size: 0.6875rem;
+  margin-top: 0.3125rem;
+}
+
+.upload-modal .control-label {
+  font-size: 0.9375rem;
+}
+
+.upload-modal .form-control {
+  height: 2rem;
+  border-radius: 0.3125rem !important;
+}
+
+.textField {
+  font-size: 0.875rem;
+}
+
+.cancel-button {
+  margin-left: 0 !important;
+}
