--- a/src/components/Insights.css
+++ b/src/components/Insights.css
@@ -16,13 +16,14 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
- .insights-container {
-   background-color: white;
-   overflow: scroll;
- }
- 
+.insights-container {
+  background-color: white;
+  overflow: scroll;
+}
+
 .insight-header {
   padding: 15px;
+  width: 100%;
 }
 
 .insight-title {
