--- a/src/components/LibraryItem.css
+++ b/src/components/LibraryItem.css
@@ -16,7 +16,7 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
-.dataset {
+.item {
   background-color: #fff;
   position: relative;
   border-bottom: 1px solid #dfe3e9;
@@ -38,12 +38,12 @@
   padding-left: 1rem;
 }
 
-.dataset .center-info {
+.item .center-info {
   margin-left: 15px;
   max-width: 210px;
 }
 
-.dataset .title {
+.item .title {
   font-size: 14px;
   font-weight: 700;
   white-space: nowrap;
@@ -52,7 +52,7 @@
   text-overflow: ellipsis;
 }
 
-.dataset .info {
+.item .info {
   font-size: 12px;
   color: #8c9caf;
   white-space: nowrap;
@@ -61,7 +61,7 @@
   text-overflow: ellipsis;
 }
 
-.dataset .add-icon {
+.item .add-icon {
   height: 0.9375rem;
 }
 .tabular-icon {
@@ -104,4 +104,3 @@
 .large-header {
   margin-right: auto;
 }
-
