--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -16,9 +16,14 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
+
 .insight-chart {
   max-width: 100%;
   max-height: 100%;
   margin-top: 30px;
   cursor: pointer;
+}
+
+.insight-chart:hover {
+  border: 1px solid;
 }
