--- a/src/components/RecentImports/RecentImports.css
+++ b/src/components/RecentImports/RecentImports.css
@@ -17,43 +17,24 @@
  * data.world, Inc. (http://data.world/).
  */
 
-.recent-item-text {
-  width: 85%;
-  font-size: 14px;
-}
-
-.recent-import-item {
+.recents-header {
+  height: 49px;
+  background-color: #ffffff;
+  border-bottom: 1px solid #aeb9c7;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  padding-bottom: 12px;
-  padding-top: 12px;
-  padding: 12px 15px;
-  border-bottom: 1px solid #dfe3e9;
-  align-items: center;
-  background-color: white;
 }
 
-.recent-text-title {
-  font-weight: bold;
+.recents-header-text {
+  font-size: 18px;
+  padding-left: 16px;
 }
 
-.recent-item-image {
-  border-radius: 50%;
-  background-color: #5dc0de;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  margin-top: 2px;
-  cursor: pointer;
-}
-
-.loader-container {
-  display: flex;
-  align-items: center;
-  margin-right: 10px;
+.recents-header-button {
+  padding-right: 16px;
+  font-size: 13px;
+  box-shadow: none;
 }
 
 .recents-date {
