--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,14 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
+
+@font-face {
+  font-family: 'Lato';
+  src: local('Lato'), url(./static/fonts/Lato.woff) format('woff');
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Lato';
 }
