--- a/src/components/Published.css
+++ b/src/components/Published.css
@@ -16,6 +16,10 @@
  * This product includes software developed at
  * data.world, Inc. (http://data.world/).
  */
+.published {
+  width: 100%;
+}
+
 .published-container {
   width: 90%;
   margin: 0 auto;
