--- a/src/components/SelectItem/SelectItem.css
+++ b/src/components/SelectItem/SelectItem.css
@@ -35,8 +35,8 @@
 }
 
 .select-item-button {
-  width: 25%;
-  padding: 0 0.625rem;
+  width: 30%;
+  padding: 0;
   font-size: 14px;
   background: white;
   border-radius: 0;
