Address PR feedback

--- a/src/components/TokenLoginPage/TokenLoginPage.css
+++ b/src/components/TokenLoginPage/TokenLoginPage.css
@@ -76,6 +76,8 @@
 
 .token-login .help-text {
   font-size: 0.8em;
+  /* Hide help text until we have the doc page */
+  display: none;
 }
 
 .token-login .sign-up {
