--- a/src/components/RecentUploads.css
+++ b/src/components/RecentUploads.css
@@ -49,7 +49,16 @@
   font-size: 14px;
 }
 
+.actions-container {
+  display: flex;
+}
+
 .icon-upload-blue {
   width: 18px;
   height: 18px;
+}
+
+.icon-delete {
+  color: red;
+  margin-right: 1rem;
 }
