Feature delete recent history items (#108)
* Delete recent upload item

* Delete recent import item

* Remove duplicate code

* Bug fix

* Address PR feedback

--- a/src/components/RecentUploads.css
+++ b/src/components/RecentUploads.css
@@ -49,7 +49,20 @@
   font-size: 14px;
 }
 
+.actions-container {
+  display: flex;
+}
+
 .icon-upload-blue {
   width: 18px;
   height: 18px;
+}
+
+.icon-clear {
+  color: #8c9caf;
+  margin-right: 1rem;
+}
+
+.clear-warning-modal {
+  padding-top: 50%;
 }
